--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h2> New Website Coming Soon!</h2>
 <hr>
 <p>stay tuned for more exciting updates</p>
-<p>Contact us at ***** to Be connected with an agent!</p>
+<p>Contact us at info@www.seeking-home.net to Be connected with an agent!</p>
 
 <img src="img_logo.jpg" alt="SeekingHmoeLogo" width="460" height="345">
     </body>
